[project]
name = "outpost-etl-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "build>=1.3.0",
    "docker>=7.1.0",
    "pybreaker>=1.4.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "redis>=7.0.1",
    "setuptools>=80.9.0",
    "tenacity>=9.1.2",
]
