[project]
name = "owm-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "pybreaker>=1.4.1",
    "pydantic>=2.12.3",
    "pytest>=9.0.0",
    "pytest-env>=1.2.0",
    "redis>=7.0.1",
    "tenacity>=9.1.2",
]
